# infinitesweeper

./: .gitignore  Cargo.toml  a.pvp  build.rs  finder.txt  readme.md  run.ps1  shaderbuild.ps1  sync_extras.ps1
assets/shaders/: pass.coms  pass.pvp
peridot-archiver/: .gitignore  Cargo.toml  out.par
peridot-archiver/src/: main.rs  par.rs
peridot-cradle-android/app/: build.gradle
peridot-cradle-android/peridot-cradle-android/: Cargo.toml
peridot-cradle-android/peridot-cradle-android/src/: glib.rs  lib.rs
peridot-cradle-android/peridot-cradle-android/src/peridot/: mod.rs  resource.rs  window.rs
peridot-engine/: Cargo.toml
peridot-serialization-utils/src/: lib.rs
peridot-shaderbuild/: Cargo.toml
peridot-shaderbuild/src/: decombiner.rs  main.rs
peridot-vertex-processing-pack/: Cargo.toml
peridot-vertex-processing-pack/src/: lib.rs
src/: glib.rs  main.rs
src/peridot/: debug.rs  input.rs  mod.rs  resource.rs  window.rs
