[package]
name = "infinitesweeper"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
build = "build.rs"

[dependencies]
appframe = { git = "https://github.com/Pctg-x8/appframe", features = ["with_bedrock"] }
bedrock = { git = "https://github.com/Pctg-x8/bedrock", features = ["Presentation", "Implements"] }
libc = "0.2"
log = "0.4"
env_logger = "0.5"
regex = "1.0"
bitflags = "1.0"
peridot-vertex-processing-pack = { path = "peridot-vertex-processing-pack" }

[target.'cfg(target_os = "android")'.dependencies]
android = { git = "https://github.com/Pctg-x8/android-defs-rs" }
